--- a/tests/integration/targets/omevv_firmware_repository_profile_info/tests/all_firmware_repository_profile.yaml
+++ b/tests/integration/targets/omevv_firmware_repository_profile_info/tests/all_firmware_repository_profile.yaml
@@ -13,7 +13,7 @@
     is not defined
 
 - block:
-    - name: Retrieve all vcenter info (Check mode - Changes expected)
+    - name: Retrieve all profile info (Check mode - Changes expected)
       dellemc.openmanage.omevv_firmware_repository_profile_info: &retrieve_info
         hostname: "{{ hostname }}"
         vcenter_username: "{{ vcenter_username }}"
@@ -22,36 +22,40 @@
       register: cm_changes
       check_mode: true
 
-    - name: Verify task status - Retrieve all vcenter info
+    - name: Verify task status - Retrieve all profile info
        (Check mode - Changes expected)
       ansible.builtin.assert:
         that:
           - not cm_changes.changed
-          - cm_changes.msg == "Successfully retrieved the firmware repository profile information."
+          - cm_changes.msg == "Successfully retrieved the firmware repository
+           profile information."
 
-    - name: Retrieve all vcenter info (Normal Mode)
+    - name: Retrieve all profile info (Normal Mode)
       dellemc.openmanage.omevv_firmware_repository_profile_info:
         <<: *retrieve_info
       register: info_result
 
-    - name: Verify task status - Retrieve all vcenter info (Normal Mode)
+    - name: Verify task status - Retrieve all profile info (Normal Mode)
       ansible.builtin.assert:
         that:
           - not info_result.changed
-          - info_result.msg == "Successfully retrieved the firmware repository profile information."
+          - info_result.msg == "Successfully retrieved the firmware repository
+           profile information."
 
-    - name: Get Vcenter details by uri.
+    - name: Get profile details by uri.
       ansible.builtin.uri:
         url: https://{{ hostname | ansible.utils.ipwrap }}:{{ port
          }}/omevv/GatewayService/v1/RepositoryProfiles
-        user: "{{ ome_username }}"
-        password: "{{ ome_password }}"
+        user: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
         validate_certs: false
         force_basic_auth: true
         status_code: 200
+        headers:
+          x_omivv-api-vcenter-identifier: "{{ uuid }}"
       register: uri_resp
 
-    - name: Verify - Get Vcenter details by uri.
+    - name: Verify - Get profile details by uri.
       ansible.builtin.assert:
         that:
           - info_result.profile_info == uri_resp.json
