[integration][omevv] omevv_vcenter_info (#748)
* [integration][omevv] omevv_vcenter_info

--- a/tests/integration/targets/prepare_omevv_registration/tasks/main.yaml
+++ b/tests/integration/targets/prepare_omevv_registration/tasks/main.yaml
@@ -56,3 +56,8 @@
     - name: Set fact of uuid
       ansible.builtin.set_fact:
         uuid: "{{ console_details.json[0].uuid }}"
+        vcenter_hostname: "{{ console_details.json[0].consoleAddress }}"
+
+    - name: Set fact of consoleAddress
+      ansible.builtin.set_fact:
+        vcenter_hostname: "{{ console_details.json[0].consoleAddress }}"
