--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -2079,22 +2079,24 @@ releases:
     changes:
       release_summary: '- Modules are added to support OpenManage Enterprise
           Integration for VMWare vCenter Plug-in.
-        - The ``omevv_vcenter_info`` module is added to support retrieval of vCenter
-          information.
-        - The ``omevv_firmware_repository_profile_info`` module is added to support
-          retrieval of firmware repository profile information.
+        - The ``omevv_vcenter_info`` module is added to support retrieval of
+          vCenter information.
+        - The ``omevv_firmware_repository_profile_info`` module is added to
+          support retrieval of firmware repository profile information.
         - The ``omevv_firmware_repository_profile`` module is added to support
           management of firmware repository profile.
-        - The ``idrac_system_info`` and ``idrac_firmware_info`` module is enhanced
-          to support iDRAC10 and OMSDK dependency is removed.'
+        - The ``idrac_firmware_info`` module is enhanced to support
+          iDRAC10 and OMSDK dependency is removed.'
       major_changes:
-        - omevv_vcenter_info - This module allows to retrieve vCenter information.
-        - omevv_firmware_repository_profile_info - This module allows to retrieve
-          firmware repository profile information.
+        - omevv_vcenter_info - This module allows to retrieve vCenter
+          information.
+        - omevv_firmware_repository_profile_info - This module allows to
+          retrieve firmware repository profile information.
         - omevv_firmware_repository_profile - This module allows to manage
           firmware repository profile.
       minor_changes:
-        - idrac_firmware_info - This module is enhanced to support iDRAC10 and OMSDK dependency is removed.
+        - idrac_firmware_info - This module is enhanced to support iDRAC10 and
+          OMSDK dependency is removed.
       bugfixes:
         - idrac_storage_volume - Issue(290766) - The module will report success
           instead of showing failure for new virtual creation on the BOSS-N1
@@ -2122,7 +2124,8 @@ releases:
           name: omevv_vcenter_info
           namespace: ''
         - description:
-            This module allows to retrieve firmware repository profile information.
+            This module allows to retrieve firmware repository profile
+            information.
           name: omevv_firmware_repository_profile_info
           namespace: ''
         - description:
