--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -29,4 +29,4 @@
 # Vasanth Ds (Vasanth_Sathyanaraya@Dell.com)
 
 # for all files:
-* @sachin-apa @felixs88 @ABHISHEK-SINHA10 @Kritika-Bhateja-03 @rajshekarp87 @ShivamSh3 @singh-lovepreet1
+* @sachin-apa @ABHISHEK-SINHA10 @Kritika-Bhateja-03 @rajshekarp87 @ShivamSh3
