Added Modify test case

--- a/tests/integration/targets/omevv_baseline_profile/tests/_verify_baseline.yml
+++ b/tests/integration/targets/omevv_baseline_profile/tests/_verify_baseline.yml
@@ -1,4 +1,4 @@
-# Retrieve baseline information from OMEVV
+ # Retrieve baseline information from OMEVV and verify against module output
 ---
 - block:
     - name: Retrieve Baseline information
