--- a/playbooks/omevv/omevv_baseline_profile.yml
+++ b/playbooks/omevv/omevv_baseline_profile.yml
@@ -3,10 +3,20 @@
   hosts: omevv
   gather_facts: false
   tasks:
+    - name: Retrieve specific vCenter information.
+      dellemc.openmanage.omevv_vcenter_info:
+        hostname: "192.168.0.1"
+        username: "username"
+        password: "password"
+        validate_certs: false
+        ca_path: "path/to/ca_file"
+        vcenter_hostname: "{{ vcenter_hostname }}"
+      register: vcenter_info_output
+
     - name: Create a baseline profile for multiple cluster
       dellemc.openmanage.omevv_baseline_profile:
         hostname: "192.168.0.1"
-        vcenter_uuid: "xxxxx"
+        vcenter_uuid: "{{ vcenter_info_output.vcenter_info.uuid }}"
         vcenter_username: "username"
         vcenter_password: "password"
         ca_path: "path/to/ca_file"
@@ -24,7 +34,7 @@
     - name: Modify a baseline profile
       dellemc.openmanage.omevv_baseline_profile:
         hostname: "192.168.0.1"
-        vcenter_uuid: "xxxxx"
+        vcenter_uuid: "{{ vcenter_info_output.vcenter_info.uuid }}"
         vcenter_username: "username"
         vcenter_password: "password"
         ca_path: "path/to/ca_file"
@@ -42,7 +52,7 @@
     - name: Delete a specific baseline profile
       dellemc.openmanage.omevv_baseline_profile:
         hostname: "192.168.0.1"
-        vcenter_uuid: "xxxxx"
+        vcenter_uuid: "{{ vcenter_info_output.vcenter_info.uuid }}"
         vcenter_username: "username"
         vcenter_password: "password"
         ca_path: "path/to/ca_file"
