Added deleted and refactored code

--- a/tests/integration/targets/omevv_baseline_profile/tests/_cleanup.yml
+++ b/tests/integration/targets/omevv_baseline_profile/tests/_cleanup.yml
@@ -5,19 +5,22 @@
         state: absent
         name: OMAM_Baseline_Profile
       register: delete_baseline_profile
+      when: delete_baseline_trigger is defined
 
     - name: Verify task status - Delete baseline profile
       ansible.builtin.assert:
         that:
           - delete_baseline_profile.changed
-          - 'delete_baseline_profile.msg == "Successfully deleted the OMEVV
-            baseline profile."'
+          - 'delete_baseline_profile.msg == "Successfully deleted the baseline
+            profile."'
+      when: delete_baseline_trigger is defined
 
-    - name: Delete Repository profile
+    - name: Delete Repository profile - 1
       dellemc.openmanage.omevv_baseline_profile:
         state: absent
         name: OMAM_Firm_Repo
       register: delete_firm_repo_profile
+      when: delete_repository_profile_1_trigger is defined
 
     - name: Verify task status - Delete baseline profile
       ansible.builtin.assert:
@@ -25,6 +28,22 @@
           - delete_firm_repo_profile.changed
           - 'delete_firm_repo_profile.msg == "Successfully deleted the OMEVV
             firmware repository profile."'
+      when: delete_repository_profile_2_trigger is defined
+
+    - name: Delete Repository profile - 2
+      dellemc.openmanage.omevv_baseline_profile:
+        state: absent
+        name: OMAM_Firm_Repo
+      register: delete_firm_repo_profile
+      when: delete_repository_profile_1_trigger is defined
+
+    - name: Verify task status - Delete baseline profile
+      ansible.builtin.assert:
+        that:
+          - delete_firm_repo_profile.changed
+          - 'delete_firm_repo_profile.msg == "Successfully deleted the OMEVV
+            firmware repository profile."'
+      when: delete_repository_profile_2_trigger is defined
 
   module_defaults:
     dellemc.openmanage.omevv_baseline_profile:
