Fixed sonar issues

--- a/tests/integration/targets/omevv_baseline_profile/tests/_verify_baseline.yml
+++ b/tests/integration/targets/omevv_baseline_profile/tests/_verify_baseline.yml
@@ -1,4 +1,4 @@
- # Retrieve baseline information from OMEVV and verify against module output
+# Retrieve baseline information from OMEVV and verify against module output
 ---
 - block:
     - name: Retrieve Baseline information
@@ -9,7 +9,8 @@
     - name: Verify task status - Retrieve Baseline information
       ansible.builtin.assert:
         that:
-          - baseline_info.baseline_profile_info == normal_result_baseline.profile_info
+          - 'baseline_info.baseline_profile_info == 
+            normal_result_baseline.profile_info'
 
   module_defaults:
     dellemc.openmanage.omevv_baseline_profile_info:
