--- a/tests/integration/targets/omevv_baseline_profile/tests/_helper.yml
+++ b/tests/integration/targets/omevv_baseline_profile/tests/_helper.yml
@@ -6,7 +6,8 @@
         name: "OMAM_Firm_Repo"
         description: "Firmware repository profile created by OMAM"
         state: present
-        catalog_path: "{{ http_share_dir_path }}/omevv_baseline_profile_catalog.xml"
+        catalog_path: "{{ http_share_dir_path }}/
+          omevv_baseline_profile_catalog.xml"
         protocol_type: HTTP
       register: firm_repo_1
       when: repository_profile_1_trigger is defined
@@ -25,7 +26,8 @@
         name: "OMAM_Modify_Firm_Repo"
         description: "Firmware repository profile created by OMAM"
         state: present
-        catalog_path: "{{ http_share_dir_path }}/omevv_baseline_profile_catalog.xml"
+        catalog_path: "{{ http_share_dir_path }}/
+          omevv_baseline_profile_catalog.xml"
         protocol_type: HTTP
       register: firm_repo_2
       when: repository_profile_2_trigger is defined
