--- a/playbooks/omevv/omevv_baseline_profile.yml
+++ b/playbooks/omevv/omevv_baseline_profile.yml
@@ -12,6 +12,7 @@
         ca_path: "path/to/ca_file"
         vcenter_hostname: "{{ vcenter_hostname }}"
       register: vcenter_info_output
+      delegate_to: localhost
 
     - name: Create a baseline profile for multiple cluster
       dellemc.openmanage.omevv_baseline_profile:
@@ -30,6 +31,7 @@
           - "sunday"
           - "wednesday"
         time: "22:10"
+      delegate_to: localhost
 
     - name: Modify a baseline profile
       dellemc.openmanage.omevv_baseline_profile:
@@ -48,6 +50,7 @@
         days:
           - "sunday"
         time: "05:00"
+      delegate_to: localhost
 
     - name: Delete a specific baseline profile
       dellemc.openmanage.omevv_baseline_profile:
@@ -58,3 +61,4 @@
         ca_path: "path/to/ca_file"
         state: "absent"
         name: "profile-1"
+      delegate_to: localhost
