--- a/tests/integration/targets/omevv_firmware_repository_profile/tests/modify.yaml
+++ b/tests/integration/targets/omevv_firmware_repository_profile/tests/modify.yaml
@@ -88,34 +88,35 @@
         second_share__username: "{{ item.second_username }}"
         second_share__password: "{{ item.second_password }}"
       loop:
-        - protocol: "HTTPS"
-          first_path: "{{ https_share_ip }}"
-          second_path: "https://downloads.dell.com/catalog/catalog.xml.gz"
+        # - protocol: "HTTPS"
+        #   first_path: "{{ https_share_ip }}"
+        #   second_path: "https://downloads.dell.com/catalog/catalog.xml.gz"
         - protocol: "HTTP"
           first_path: "{{ http_share }}{{ http_share_dir_path }}"
           second_path: "http://downloads.dell.com/catalog/catalog.xml.gz"
-        - protocol: "CIFS"
-          first_path: "{{ cifs_share_name }}"
-          second_path: "{{ modify_cifs_share_name }}"
-          first_username: "{{ cifs_share_user }}"
-          second_username: "{{ modify_cifs_share_user }}"
-          first_password: "{{ cifs_share_password }}"
-          second_password: "{{ modify_cifs_share_password }}"
-        - protocol: "NFS"
-          first_path: "{{ nfs_share_name }}"
-          second_path: "{{ modify_nfs_share_name }}"
+        # - protocol: "CIFS"
+        #   first_path: "{{ cifs_share_name }}"
+        #   second_path: "{{ modify_cifs_share_name }}"
+        #   first_username: "{{ cifs_share_user }}"
+        #   second_username: "{{ modify_cifs_share_user }}"
+        #   first_password: "{{ cifs_share_password }}"
+        #   second_password: "{{ modify_cifs_share_password }}"
+        # - protocol: "NFS"
+        #   first_path: "{{ nfs_share_name }}"
+        #   second_path: "{{ modify_nfs_share_name }}"
 
   always:
     - name: Cleanup
       dellemc.openmanage.omevv_firmware_repository_profile:
-        name: "Ansible_Repo_Modify_{{ item }}"
+        name: "{{ item }}"
         state: absent
       ignore_errors: true
       loop:
-        - "HTTPS"
-        - "HTTP"
-        - "NFS"
-        - "CIFS"
+        - "Ansible_Repo_Modify_HTTPS"
+        - "Ansible_Repo_Modify_HTTP"
+        - "Ansible_Repo_Modify_NFS"
+        - "Ansible_Repo_Modify_CIFS"
+        - "Upd_Ansible_Repo_Modify_HTTPS"
 
   module_defaults:
     dellemc.openmanage.omevv_firmware_repository_profile:
